[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/client",
    "crates/server",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/DarthMurse/wormhole"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
